platform/workload/manifests/wikijs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wikijs
  namespace: database
  labels:
    app: wikijs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wikijs
  template:
    metadata:
      labels:
        app: wikijs
    spec:
      containers:
        - name: wikijs
          image: ghcr.io/requarks/wiki:2
          resources:
            requests:
              cpu: "128Mi"
              memory: "100m"
            limits:
              cpu: "512Mi"
              memory: "500m"
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: data
              mountPath: /wiki/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: wikijs-data-pvc
