platform/workload/manifests/wikijs/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wikijs
  namespace: database
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000  
  selector:
    app: wikijs
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wikijs
  namespace: database
spec:
  ingressClassName: traefik-internal
  rules:
    - host: wiki.192.168.64.241.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wikijs
                port:
                  number: 3000
